# Pomoclock

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GTAGS  Gemfile  Makefile  README.md  cmake_install.cmake  compile_commands.json  launch.sh  main.c  main.h  package.json
app/javascript/components/: Dashboard.tsx  Footer.tsx  Login.js  NavBar.tsx  Timer.tsx
app/views/dashboard/: index.html.erb
app/views/layouts/: _footer.html.erb  _header.html.erb  application.html.erb
config/: application.rb  cable.yml  credentials.yml.enc  tailwind.config.js
config/environments/: development.rb  production.rb
config/webpack/: webpack.config.js
